updated the content as per tixito for Features & About us

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -49,14 +49,11 @@
     <div class="page-hero-content mx-auto max-w-[768px] text-center">
       <h1 class="mb-5 mt-8">About our company</h1>
       <p>
-        Donec sollicitudin molestie malesda. Donec sollitudin molestie
-        malesuada. Mauris pellentesque nec, egestas non nisi. Cras ultricies
-        ligula sed magna dictum porta. Lorem
+        We are the next big thing in the Event Ticketing space.We help Users re-sell their un-sold tickets by providing
+        safe and secure robust platform.
       </p>
       <div class="mt-11 justify-center sm:flex">
-        <a class="btn btn-primary m-3 block sm:inline-block" href="#"
-          >Download The Theme</a
-        >
+
         <a
           class="btn btn-outline-primary m-3 block min-w-[160px] sm:inline-block"
           href="#"
@@ -70,7 +67,7 @@
           class="border-border px-10 py-10 text-center sm:col-6 lg:col-3 lg:border-r lg:py-0"
         >
           <h2>
-            <span class="count">25M</span> <span class="text-[#A3A1FB]">+</span>
+            <span class="count">0M</span> <span class="text-[#A3A1FB]">+</span>
           </h2>
           <p>Customers</p>
         </div>
@@ -78,22 +75,22 @@
           class="border-border px-10 py-10 text-center sm:col-6 lg:col-3 lg:border-r lg:py-0"
         >
           <h2>
-            <span class="count">440M</span>
+            <span class="count">0M</span>
             <span class="text-[#5EE2A0]">+</span>
           </h2>
-          <p>Products sold</p>
+          <p>Tickets sold</p>
         </div>
         <div
           class="border-border px-10 py-10 text-center sm:col-6 lg:col-3 lg:border-r lg:py-0"
         >
           <h2>
-            <span class="count">50K</span> <span class="text-primary">+</span>
+            <span class="count">0K</span> <span class="text-primary">+</span>
           </h2>
-          <p>Online stores</p>
+          <p>Online Sells</p>
         </div>
         <div class="px-10 py-10 text-center sm:col-6 lg:col-3 lg:py-0">
           <h2>
-            <span class="count">20K</span> <span class="text-[#FEC163]">+</span>
+            <span class="count">0K</span> <span class="text-[#FEC163]">+</span>
           </h2>
           <p>Transactions</p>
         </div>
@@ -108,7 +105,7 @@
   <div class="container">
     <div class="row justify-center text-center">
       <div class="col-8">
-        <h2>We started with one single goal Empower entrepreneurs</h2>
+        <h2>We started with one single goal Empower users to take control of their Un-used tickets</h2>
       </div>
     </div>
     <div class="row mt-2.5">
@@ -169,7 +166,7 @@
         </h2>
       </div>
       <div class="mt-6 text-center md:col-3 md:mt-0 md:text-right">
-        <a class="btn btn-primary" href="#">Download The Theme</a>
+<!--        <a class="btn btn-primary" href="#">Download The Theme</a>-->
       </div>
     </div>
     <div class="row mt-14">
@@ -184,8 +181,8 @@
           </div>
           <h4 class="my-6">Accessibility</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            Platform does the heavy lifting , so you don't have to.
+            We make sure that you are matched with appropriate buyers and sellers
           </p>
         </div>
       </div>
@@ -198,10 +195,9 @@
             >
             <img src="images/gradient-number-bg.svg" alt="" />
           </div>
-          <h4 class="my-6">Empowerement</h4>
+          <h4 class="my-6">Authenticity</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            You can be sure that the sellers and buyers on our platform are the most genuine and vetted by our internla vetting process
           </p>
         </div>
       </div>
@@ -216,8 +212,7 @@
           </div>
           <h4 class="my-6">Innovation</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            We are continuously improving and innovating our platform to make customer experience as smooth and as hassel free as possible
           </p>
         </div>
       </div>
@@ -232,8 +227,7 @@
           </div>
           <h4 class="my-6">Excellence</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            We make sure that while you are using the platform we provide with all the necessary tools to make your ticket selling experience
           </p>
         </div>
       </div>
@@ -248,8 +242,8 @@
           </div>
           <h4 class="my-6">Team work</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            We have team of Comitted Engineers & Support staff to support you through the journey of getting the right value for your money.
+
           </p>
         </div>
       </div>
@@ -264,8 +258,7 @@
           </div>
           <h4 class="my-6">Responsibility</h4>
           <p>
-            Nulla porttitor acmsan tinci dunt. posuere cubilia Cudfrae Donec
-            velit neque, autor sit amet aliuam vel
+            You can be sure that while using our platform we take full responsibility of your money and make sure you get the right deal.
           </p>
         </div>
       </div>
@@ -281,8 +274,7 @@
       <div class="mx-auto text-center lg:col-6">
         <h2>This is who we are</h2>
         <p class="mt-4">
-          Donec sollicitudin molestie malesda. Donec sollitudin mol estie
-          ultricies ligula sed magna dictum
+          Meet and Connect with our team
         </p>
       </div>
     </div>
@@ -302,8 +294,8 @@
             <div
               class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
             >
-              <h5 class="font-primary">Eleanor Pena</h5>
-              <p class="mt-1.5">Co-founder & COO</p>
+              <h5 class="font-primary">Pratik Waghela</h5>
+              <p class="mt-1.5">Founder & CEO</p>
             </div>
           </div>
           <div
@@ -319,8 +311,8 @@
             <div
               class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
             >
-              <h5 class="font-primary">Savannah Nguyen</h5>
-              <p class="mt-1.5">Head of Infrastructure</p>
+              <h5 class="font-primary">Mehul Gohil</h5>
+              <p class="mt-1.5">Co-Founder & CTO</p>
             </div>
           </div>
           <div
@@ -336,60 +328,60 @@
             <div
               class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
             >
-              <h5 class="font-primary">Courtney Henry</h5>
-              <p class="mt-1.5">Head of Brand Marketing</p>
+              <h5 class="font-primary">Gaurav Lotekar</h5>
+              <p class="mt-1.5">Co-Founder</p>
             </div>
           </div>
           <div
             class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center"
           >
-            <div class="member-avatar inline-flex justify-center">
-              <img
-                class="rouded-full h-28 w-28"
-                src="images/users/user-4.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
-            >
-              <h5 class="font-primary">Floyd Miles</h5>
-              <p class="mt-1.5">Head of Infrastructure</p>
-            </div>
-          </div>
-          <div
-            class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center"
-          >
-            <div class="member-avatar inline-flex justify-center">
-              <img
-                class="rouded-full h-28 w-28"
-                src="images/users/user-5.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
-            >
-              <h5 class="font-primary">Robert Fox</h5>
-              <p class="mt-1.5">Head of Product Design</p>
-            </div>
-          </div>
-          <div
-            class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center"
-          >
-            <div class="member-avatar inline-flex justify-center">
-              <img
-                class="rouded-full h-28 w-28"
-                src="images/users/user-6.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"
-            >
-              <h5 class="font-primary">Darrell Steward</h5>
-              <p class="mt-1.5">Head of People & HR</p>
-            </div>
+<!--            <div class="member-avatar inline-flex justify-center">-->
+<!--              <img-->
+<!--                class="rouded-full h-28 w-28"-->
+<!--                src="images/users/user-4.png"-->
+<!--                alt=""-->
+<!--              />-->
+<!--            </div>-->
+<!--            <div-->
+<!--              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"-->
+<!--            >-->
+<!--              <h5 class="font-primary">Floyd Miles</h5>-->
+<!--              <p class="mt-1.5">Head of Infrastructure</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div-->
+<!--            class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center"-->
+<!--          >-->
+<!--            <div class="member-avatar inline-flex justify-center">-->
+<!--              <img-->
+<!--                class="rouded-full h-28 w-28"-->
+<!--                src="images/users/user-5.png"-->
+<!--                alt=""-->
+<!--              />-->
+<!--            </div>-->
+<!--            <div-->
+<!--              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"-->
+<!--            >-->
+<!--              <h5 class="font-primary">Robert Fox</h5>-->
+<!--              <p class="mt-1.5">Head of Product Design</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div-->
+<!--            class="mb-6 flex flex-col px-6 text-center sm:col-6 lg:col-4 sm:items-center"-->
+<!--          >-->
+<!--            <div class="member-avatar inline-flex justify-center">-->
+<!--              <img-->
+<!--                class="rouded-full h-28 w-28"-->
+<!--                src="images/users/user-6.png"-->
+<!--                alt=""-->
+<!--              />-->
+<!--            </div>-->
+<!--            <div-->
+<!--              class="mt-6 w-full flex-1 rounded-xl bg-white py-8 px-4 shadow-lg"-->
+<!--            >-->
+<!--              <h5 class="font-primary">Darrell Steward</h5>-->
+<!--              <p class="mt-1.5">Head of People & HR</p>-->
+<!--            </div>-->
           </div>
         </div>
       </div>
