--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -49,7 +49,7 @@
     <div class="page-hero-content mx-auto max-w-[768px] text-center">
       <h1 class="mb-5 mt-8">
         Get’n touch with Our <br />
-        Pinwheel team
+        Tixito team
       </h1>
     </div>
   </div>
@@ -93,9 +93,9 @@
             <label class="form-label" for="reason">reason/purpose</label>
             <select name="reason" id="reason" class="form-select" required>
               <option value="">Select reason/purpose</option>
-              <option value="investment plane">Investment Plan</option>
-              <option value="investment plane-2">Investment Plan 2</option>
-              <option value="investment plane-3">Investment Plan 3</option>
+              <option value="investment plane">General Enquiry</option>
+              <option value="investment plane-2">Transaction Status</option>
+              <option value="investment plane-3">Support Request</option>
             </select>
           </div>
           <div class="form-group mb-5">
