--- a/src/pages/features.html
+++ b/src/pages/features.html
@@ -80,14 +80,15 @@
           </li>
         </ul>
         <h1>
-          Connects with all your other tools to create a smooth experience.
+          Re-sell any type of tickets with our platform.
+
         </h1>
         <p class="mt-6">
-          Donec sollicitudin molestie malesda. Donec sollitudin molestie
-          malesuada. Mauris pellentesque nec, egestas non nisi. Cras ultricies
-          ligula sed magna dictum porta. Lorem
+          Be it a Concert/Movie/Liveshows/Theatre etc, seamless ticket re-sell experience.
+          Authenticity & Security built in.
+
         </p>
-        <a class="btn btn-primary mt-6" href="#">Download The Theme</a>
+<!--        <a class="btn btn-primary mt-6" href="#">Download The Theme</a>-->
       </div>
     </div>
   </div>
@@ -98,13 +99,11 @@
     <div class="row">
       <div class="mx-auto text-center lg:col-7">
         <h2>
-          Build collaborative workspaces <br />
-          for your team
+          Build communities of like-minded folks around you <br />
+
         </h2>
         <p class="mt-4">
-          Donec sollicitudin molestie malesda. Donec sollitudin molestie
-          malesuada. <br />
-          Mauris pellentesque nec, egestas non nisi. Cras ultricies .
+
         </p>
       </div>
     </div>
@@ -114,7 +113,7 @@
       <div class="row">
         <div class="lg:col-6">
           <div class="h-full rounded-lg bg-[#FAFAFA] p-6 lg:p-8">
-            <h3 class="h5 mb-8 font-primary">Project Management</h3>
+            <h3 class="h5 mb-8 font-primary">Top Comedians</h3>
             <div class="row">
               <div class="col-6 mb-6">
                 <div
@@ -216,7 +215,7 @@
             <a
               class="btn btn-primary block w-full font-bold capitalize"
               href="#"
-              >view all tasks</a
+              >View all</a
             >
           </div>
         </div>
@@ -246,10 +245,9 @@
               </svg>
             </div>
             <div>
-              <h3 class="h5 font-primary">Boost engagement</h3>
+              <h3 class="h5 font-primary">Prefrences</h3>
               <p class="mt-4">
-                Encourage frequent & timely recognition integrating with
-                communication tools
+                Setting preferences so that you get relevant recommendations
               </p>
             </div>
           </div>
@@ -280,8 +278,7 @@
             <div>
               <h3 class="h5 font-primary">Reduce friction</h3>
               <p class="mt-4">
-                Encourage frequent & timely recognition integrating with
-                communication tools
+                Connecting the right sellers with right buyes with any hassle
               </p>
             </div>
           </div>
@@ -310,10 +307,9 @@
               </svg>
             </div>
             <div>
-              <h3 class="h5 font-primary">Discover strengths</h3>
+              <h3 class="h5 font-primary">Discover Likeliness</h3>
               <p class="mt-4">
-                Encourage frequent & timely recognition integrating with
-                communication tools
+                Enagage into conversations with like-minded folks.
               </p>
             </div>
           </div>
@@ -325,19 +321,17 @@
         <div class="relative">
           <img
             class="w-full object-contain"
-            src="images/features/feature-img-1.png"
+            src="images/features/top-payment-methods-in-india-.png"
           />
         </div>
       </div>
       <div class="mt-6 lg:col-6 lg:order-1 lg:mt-0">
         <div class="">
           <h2 class="lg:text-4xl">
-            Accept payments from devices any country in this universe
+            Accept/Receive payments from all the major platforms
           </h2>
           <p class="mt-4">
-            Donec sollicitudin molestie malesda. Donec sollitudin molestie
-            malesuada. Mauris pellentesque nec, egestas non nisi. Cras ultricies
-            ligula sed
+            We have integrations with all the major payment platform, so you don't have to worry about how you get paid vs how you can pay.
           </p>
           <ul class="mt-6 text-dark lg:-ml-4">
             <li class="mb-2 flex items-center rounded px-4">
@@ -346,7 +340,7 @@
                 src="images/icons/checkmark-circle.svg"
                 alt=""
               />
-              Supporting more than 119 country world
+              Supporting more than 5 + Payment Types
             </li>
             <li class="mb-2 flex items-center rounded px-4">
               <img
@@ -354,7 +348,7 @@
                 src="images/icons/checkmark-circle.svg"
                 alt=""
               />
-              Open transaction with more than currencies
+              Open transaction with reward points + vouchers
             </li>
             <li class="flex items-center rounded px-4">
               <img
@@ -362,46 +356,46 @@
                 src="images/icons/checkmark-circle.svg"
                 alt=""
               />
-              Customer Service with 79 languages
+              Customer Service with 3 languages
             </li>
           </ul>
-          <div class="mt-11 flex flex-wrap">
-            <a class="btn btn-primary m-3 block w-full sm:w-auto" href="#"
-              >Download The Theme</a
-            >
-            <a
-              class="btn btn-outline-primary m-3 block w-full min-w-[160px] sm:w-auto"
-              href="#"
-              >Learn more</a
-            >
-          </div>
+<!--          <div class="mt-11 flex flex-wrap">-->
+<!--            <a class="btn btn-primary m-3 block w-full sm:w-auto" href="#"-->
+<!--              >Download The Theme</a-->
+<!--            >-->
+<!--            <a-->
+<!--              class="btn btn-outline-primary m-3 block w-full min-w-[160px] sm:w-auto"-->
+<!--              href="#"-->
+<!--              >Learn more</a-->
+<!--            >-->
+<!--          </div>-->
         </div>
       </div>
     </div>
     <div class="row mt-[120px] items-center" data-tab-group="features-tab">
       <div class="col-8 mx-auto mb-10 text-center">
         <h2>
-          Payment gateway for every stage <br />
-          of your business growth
+          Payment Management <br />
+          of transaction tracking
         </h2>
       </div>
       <div class="lg:col-6" data-tab-content>
         <div class="features-tab-penel relative" data-tab-panel="0">
           <img
             class="w-full object-contain"
-            src="images/features/feature-img-2.png"
+            src="images/features/track_payments.jpeg"
           />
         </div>
         <div class="features-tab-penel relative" data-tab-panel="1">
           <img
             class="w-full object-contain"
-            src="images/features/feature-img-1.png"
+            src="images/features/top-payment-methods-in-india-.png"
           />
         </div>
         <div class="features-tab-penel relative" data-tab-panel="2">
           <img
             class="w-full object-contain"
-            src="images/features/feature-img-2.png"
+            src="images/features/Most_Popular_Payment_Methods_featured_image.png.webp"
           />
         </div>
       </div>
@@ -410,30 +404,24 @@
           <div class="features-tab-item" data-tab="0">
             <h2 class="lg:text-2xl">
               Transaction from Anyone with <br />
-              a world to Anywhere
+              from Anywhere in India
             </h2>
             <p class="mt-4">
-              Donec sollicitudin molestie malesda. Donec sollitudin molestie
-              malesuada. Mauris pellentesque nec, egestas non nisi. Cras
-              ultricies ligula sed
+              All the transactions are seamless.
             </p>
           </div>
           <div class="features-tab-item mt-9" data-tab="1">
             <h2 class="lg:text-2xl">
-              Integrate Checkout with Process Smoothly
+              Take charge of your payments
             </h2>
             <p class="mt-4">
-              Donec sollicitudin molestie malesda. Donec sollitudin molestie
-              malesuada. Mauris pellentesque nec, egestas non nisi. Cras
-              ultricies ligula sed
+              Track all the sold/bought tickets in one place.
             </p>
           </div>
           <div class="features-tab-item mt-9" data-tab="2">
-            <h2 class="lg:text-2xl">Transaction Safely process and Securely</h2>
+            <h2 class="lg:text-2xl">Transaction Safely and Securely</h2>
             <p class="mt-4">
-              Donec sollicitudin molestie malesda. Donec sollitudin molestie
-              malesuada. Mauris pellentesque nec, egestas non nisi. Cras
-              ultricies ligula sed
+              We promise that in-case of any in-complete transaction we will regund your money withing 5-7 business days.
             </p>
           </div>
         </div>
@@ -451,14 +439,12 @@
       <div class="lg:col-11">
         <div class="row">
           <div class="lg:col-7">
-            <h2 class="h1 text-white">Helping teams in the world with focus</h2>
-            <a class="btn btn-white mt-8" href="#">Download The Theme</a>
+            <h2 class="h1 text-white">Helping Customers with Integrity</h2>
+            <a class="btn btn-white mt-8" href="#">Learn More</a>
           </div>
           <div class="mt-8 lg:col-5 lg:mt-0">
             <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-              egestas Werat viverra id et aliquet. vulputate egestas
-              sollicitudin .
+              Come Join us in phasing the next big change in Ticketing industry and making the world a better place.
             </p>
           </div>
         </div>
