--- a/product-landing-main/theme/features.html
+++ b/product-landing-main/theme/features.html
@@ -12,7 +12,7 @@
   <!-- favicon -->
   <link rel="shortcut icon" href="images/favicon.png" />
   <!-- theme meta -->
-  <meta name="theme-name" content="Pinwheel" />
+  <meta name="theme-name" content="Tixito" />
   <meta name="msapplication-TileColor" content="#000000" />
   <meta
     name="theme-color"
@@ -34,7 +34,7 @@
   />
 
   <!-- title -->
-  <title>Pinwheel-tailwind</title>
+  <title>Tixito</title>
 
   <!-- noindex robots -->
   <meta name="robots" content="" />
