--- a/product-landing-main/theme/changelogs.html
+++ b/product-landing-main/theme/changelogs.html
@@ -34,7 +34,7 @@
   />
 
   <!-- title -->
-  <title>Pinwheel-tailwind</title>
+  <title>Tixito</title>
 
   <!-- noindex robots -->
   <meta name="robots" content="" />
